--- a/src/Makefile
+++ b/src/Makefile
@@ -3,6 +3,8 @@ SRCS := ccl/ccl_get.cpp \
 	ccl/ccl_iterate.cpp \
 	ccl/ccl_parse.cpp \
 	ccl/ccl_reset.cpp \
+	common/common.cpp \
+	asr/audioCapture.cpp \
 	sense/wavesense.cpp
 
 TARGET = $(XS_LIB)/libxs.a
