--- a/tests/touchsense/Makefile
+++ b/tests/touchsense/Makefile
@@ -1,4 +1,7 @@
-
 SRCS=testsense.cpp
 TARGET=$(XS_BIN)/test_touchsense
-include $(XS_SCRIPTS)/compile_target.mk
+
+
+$(TARGET):bin
+
+include $(XS_SCRIPTS)/compile.mk
