--- a/src/Makefile
+++ b/src/Makefile
@@ -1,14 +1,16 @@
-SRCS := ccl/ccl_get.cpp \
-	ccl/ccl_release.cpp \
-	ccl/ccl_iterate.cpp \
-	ccl/ccl_parse.cpp \
-	ccl/ccl_reset.cpp \
-	common/common.cpp \
-	asr/audioCapture.cpp \
-	sense/wavesense.cpp
+#SRCS := ccl/ccl_get.cpp \
+#	ccl/ccl_release.cpp \
+#	ccl/ccl_iterate.cpp \
+#	ccl/ccl_parse.cpp \
+#	ccl/ccl_reset.cpp \
+#	common/common.cpp \
+#	asr/audioCapture.cpp \
+#	sense/wavesense.cpp
 
-TARGET = $(XS_LIB)/libxs.a
+SRCS = $(wildcard *.c)
+
+TARGET = $(SCP_LIB)/libxs.a
 
 $(TARGET):lib
 
-include $(XS_SCRIPTS)/compile.mk
+include $(SCP_SCRIPTS)/compile.mk
